kubernetes/apps/default/forgejo/app/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.bjw-s.dev/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: forgejo
spec:
  hostnames: ["git.ok8.sh"]
  parentRefs:
    - name: envoy-external
      namespace: networking
  rules:
    - backendRefs:
        - name: forgejo-http
          port: 3000
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Real-Ip
                value: "%DOWNSTREAM_REMOTE_ADDRESS_WITHOUT_PORT%"
      timeouts:
        request: 300s
